--- a/ankit_tutorial_practice.html
+++ b/ankit_tutorial_practice.html
@@ -8,49 +8,58 @@
     <link rel="stylesheet" href="/ankit_main.css">
 </head>
 <body>
-    <section>
-        <!--Title-->
-        <h1>Hi, I'm J<a href="https://github.com/AnkitBehera505"><img wwidth = 35 height = 35 src="/github icon.png" alt="github"></a>sh.</h1>
-        <!--Subtitle-->
-        <div class="about-section">
-            <h2>Software Developer, etc.</h2>
-            <h3>Melbourne, Australiaa | (+61) 000 0000</h3>
-        </div>
-        
-    </section>
-    <section>
-        <div class="experience-wrapper">
-            <h1>Experience</h1>
-            <div>
-                <h2>HackMelbourne</h2>
-                <ul>
-                    <li>Workshop Tutor</li>
-                    <li>HackMelbourne Appreciator</li>
-                </ul>
+    <main>
+        <section class="about">
+            <!--Title-->
+            <h1>Hi, I'm J<a href="https://github.com/AnkitBehera505"><img wwidth = 35 height = 35 src="/github icon.png" alt="github"></a>sh.</h1>
+            <!--Subtitle-->
+            <div class="about-section">
+                <h2>Software Developer, etc.</h2>
+                <h3>Melbourne, Australiaa | (+61) 000 0000</h3>
             </div>
-            <div>
-                <h2>Localz</h2>
-                <ul>
-                    <li>I write html and css</li>
-                    <li>I also do some Javascript</li>
-                </ul>
-            </div>
-        </div>
+        </section>
 
-    </section>
-    <section>
-        <h1>Travels</h1>
-        <div class="travels">
-            <div class="map-wrapper">
-                <h2>Auckland</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d408613.0919297591!2d174.42593449906903!3d-36.85948204413638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d47fb5a9ce6fb%3A0x500ef6143a29917!2sAuckland%2C%20New%20Zealand!5e0!3m2!1sen!2sau!4v1617442438587!5m2!1sen!2sau" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <section>
+            <div class="experience-wrapper">
+                <h1>Experience</h1>
+                <div>
+                    <h2>HackMelbourne</h2>
+                    <ul>
+                        <li>Workshop Tutor</li>
+                        <li>HackMelbourne Appreciator</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Localz</h2>
+                    <ul>
+                        <li>I write html and css</li>
+                        <li>I also do some Javascript</li>
+                    </ul>
+                </div>
             </div>
-            <div class="map-wrapper">
-                <h2>Melbourne</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805196.5057360509!2d144.49273650359143!3d-37.97015442396482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne%20VIC!5e0!3m2!1sen!2sau!4v1617442492834!5m2!1sen!2sau" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div> 
-        </div>
-        
-    </section>
+        </section>
+
+        <section class="travel-section">
+            <h1>Travels</h1>
+            <div class="travel-wrapper">
+                <div>
+                    <h2>Auckland</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d408613.0919297591!2d174.42593449906903!3d-36.85948204413638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d47fb5a9ce6fb%3A0x500ef6143a29917!2sAuckland%2C%20New%20Zealand!5e0!3m2!1sen!2sau!4v1617442438587!5m2!1sen!2sau" class="map" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div>
+                    <h2>Melbourne</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805196.5057360509!2d144.49273650359143!3d-37.97015442396482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne%20VIC!5e0!3m2!1sen!2sau!4v1617442492834!5m2!1sen!2sau" class="map" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div> 
+                <div>
+                    <h2>Auckland</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d408613.0919297591!2d174.42593449906903!3d-36.85948204413638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d47fb5a9ce6fb%3A0x500ef6143a29917!2sAuckland%2C%20New%20Zealand!5e0!3m2!1sen!2sau!4v1617442438587!5m2!1sen!2sau" class="map" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div>
+                    <h2>Melbourne</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805196.5057360509!2d144.49273650359143!3d-37.97015442396482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne%20VIC!5e0!3m2!1sen!2sau!4v1617442492834!5m2!1sen!2sau" class="map" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
