finished tuutorial on html/css

--- a/ankit_tutorial_practice.html
+++ b/ankit_tutorial_practice.html
@@ -8,8 +8,20 @@
     <link rel="stylesheet" href="/ankit_main.css">
 </head>
 <body>
+    <nav>
+        <div class="nav-bar">
+            <h1 class="nav-header">Joshua Durbar</h1>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li class="nav-travel-link"><a href="#travels">Travels</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <main>
-        <section class="about">
+        <section id="about" class="about">
             <!--Title-->
             <h1>Hi, I'm J<a href="https://github.com/AnkitBehera505"><img wwidth = 35 height = 35 src="/github icon.png" alt="github"></a>sh.</h1>
             <!--Subtitle-->
@@ -19,7 +31,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="experience">
             <div class="experience-wrapper">
                 <h1>Experience</h1>
                 <div>
@@ -39,7 +51,7 @@
             </div>
         </section>
 
-        <section class="travel-section">
+        <section id="travels" class="travel-section">
             <h1>Travels</h1>
             <div class="travel-wrapper">
                 <div>
