experimenting transitioning between pages

--- a/ankit_tutorial_practice.html
+++ b/ankit_tutorial_practice.html
@@ -15,6 +15,7 @@
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
+                    <li><a href="/ankit_tutorial_page_2.html">page2</a></li>
                     <li class="nav-travel-link"><a href="#travels">Travels</a></li>
                 </ul>
             </div>
