--- a/Page_1.html
+++ b/Page_1.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Online Study Guide</title>
+    <link rel="stylesheet" href="/Online_Study_Guide.css">
 </head>
 <body>
-    
+    <nav>
+
+    </nav>
+    <main>
+        <section>
+            <h1>Page 1 = Introduction to The Online Study Guide</h1>
+            <div>
+                <p>Welcome to the Home Page.</p>
+                <p></p>
+            </div>
+        </section>
+        <section>
+            <h2>Here are straight forward links to the pages on the content briefly mentioned:</h2>
+            <div>
+                <ul>
+                    <li><a href="/Page_2.html">Page 2 = General Tips for Online Studying</a></li>
+                    <li><a href="/Page_4.html">Page 4 = Physical Health</a></li>
+                    <li><a href="/Page_5.html">Page 5 = Mental Health</a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
