finished page 1, 2 and 3, will now do 4

--- a/Page_1.html
+++ b/Page_1.html
@@ -16,7 +16,8 @@
             <h1>Page 1 = Introduction to The Online Study Guide</h1>
             <div>
                 <p>Welcome to the Home Page.</p>
-                <p></p>
+                <p>This is a website developed for the use of individuals seeking help or information regarding online learning and how to maintain physical and mental health during that process. We have several tips and strategies that can help you be the best during online learning. In addition, we have valuable resources to support students with their online schoolwork. Our goal is to help you succeed and have a better experience when studying from home, especially during a pandemic.</p>
+                <p>Welcome to The Online Study Guide! <img width = 40 height = 40 src="/smily face emoji.jpg" alt=":)"></p>
             </div>
         </section>
         <section>
