--- a/Page_2.html
+++ b/Page_2.html
@@ -23,6 +23,22 @@
                 </p>
             </div>
         </section>
+        <section>
+            <h2>Some basic tips for better outcome through online learning are:</h2>
+            <div>
+                <ol>
+                    <li>Make sure you the right tools.<p>Before an online course/class, have everything you need to study as effectively as possible. A clean worksporce would also help.</p></li>
+                    <li>Motivate Yourself.<p>Make sure you are committed to what you do. It can be a challenge to do online learning, as the motivation and discipline has to come from the individual.</p></li>
+                    <li>Set realistic and helpful study goals.<p>Since different courses have different workloads, set goals appropriately to complete by a time and work to them.</p></li>
+                    <li>Plan out your study schedule.<p>Online learning is quite flexible.Allocate time for studying or else you can fall behind. Make sure to also prioritise certain activities.</p></li>
+                    <li>Know who to ask for help.<p>With not having your teacher beside to ask, it can be hard. Always have support services that you know to assist you. Make sure to have your teachers' contacts, friends, those who can help you with your workload.</p></li>
+                </ol>
+            </div>
+            <div>
+                <h3>And one more major tip: Enhance your Productivity!</h3>
+                <p>Productivity is described as the ratio between the output volume and the volume of inputs. How effectively you are able to do something compared to the effort put in. Productivity is vital as it can increase output with the same amount of input or less.</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
