Small typo changes

--- a/Page_5.html
+++ b/Page_5.html
@@ -30,7 +30,7 @@
                         <p>a. Mental health correlates with physical health.</p>
                         <p>b. Increasing physical activity can enhance your concentration and self-esteem.</p>
                         
-                        <h3>3. Eat healthy</h3>
+                        <h3>3. Eat healthy.</h3>
                         <p>a. Make sure that you are nutrient rich foods.</p>
                         <p>b. Do not eat fast-food, and other junk food regularly.</p>
                         <p>c. These things can promote a healthy mindset which will enrich your mental health.</p>
@@ -53,7 +53,7 @@
                         <h3>8. Ask for help.</h3>
                         <p>a. Everyone has problems asking for help is a great way to fix them.</p>
                         <p>b. Do not be afraid to ask for help, no one is judging.</p>
-                        <p>c. Beyond Blue helpline: 1300 22 4636</p>
+                        <p>c. Beyond Blue helpline: 1300 22 4636.</p>
                 <h4>When stress become overwhelming and prolong, the risks of mental health problems and medical problems increase. Long -term stress can increase mental health problems such as anxiety and depressions, substance use problems, sleep problems, pain and bodily complaints such as muscle tensions. To overcome this below is an overview of stress and stress management tips.</h4>
             </div>
         </section>
