--- a/Page_3.html
+++ b/Page_3.html
@@ -9,7 +9,23 @@
 </head>
 <body>
     <nav>
-
+        <link rel="stylesheet" href="/dropdown_menu_bar.css">
+        <div class="navbar">
+            <a href="/Page_1.html">Home</a>
+            <a href="/Page_7.html">About Us</a>
+            <div class="dropdown">
+              <button class="dropbtn">Pages
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="/Page_2.html">General Tips</a>
+                <a href="/Page_3.html">Study Resources</a>
+                <a href="/Page_4.html">Physical Health</a>
+                <a href="/Page_5.html">Mental Health</a>
+                <a href="/Page_6.html">Helplines</a>
+              </div>
+            </div>
+          </div>
     </nav>
     <main>
         <section>
