Page 5 references added

--- a/Page_5.html
+++ b/Page_5.html
@@ -98,6 +98,21 @@
                 </video>
                 <h4>Source: <a href="https://www.youtube.com/watch?v=utrAlZf_Pjs">https://www.youtube.com/watch?v=utrAlZf_Pjs</a></h4>
             </div>
+            <h2>References (not including video):</h2>
+            <div>
+                <ul>
+                    <li>Eight ways to improve your mental health at work n.d., www.beyondblue.org.au.</li>
+                    <li>Mental Health America 2019, 31 Tips to Boost Your Mental Health | Mental Health America, Mhanational.org.</li>
+                    <li>Mental Health Australia 2018, Mental Health Australia.</li>
+                    <li>Mental Health Foundation 2019, How to look after your mental health, Mental Health Foundation.</li>
+                    <li>Services, D of H & H n.d., Telephone and online services, www2.health.vic.gov.au.</li>
+                    <li>Ten Things You Can Do for Your Mental Health | University Health Service 2019, Umich.edu.</li>
+                    <li>Beyond Blue 2017, beyondblue, Beyondblue.org.au.</li>
+                    <li>Stress: Signs, Symptoms, Management & Prevention n.d., Cleveland Clinic.</li>
+                    <li>Managing stress 2019, Healthdirect.gov.au, Healthdirect Australia. </li>
+                    <li>Robinson, L n.d., Stress Management - HelpGuide.org, https://www.helpguide.org. </li>
+                </ul>
+            </div>
         </section>
     </main>
 </body>
