finished off page 2

--- a/Page_2.html
+++ b/Page_2.html
@@ -52,7 +52,39 @@
             </div>
             <div>
                 <h3>And one more major tip: Enhance your Productivity!</h3>
-                <p>Productivity is described as the ratio between the output volume and the volume of inputs. How effectively you are able to do something compared to the effort put in. Productivity is vital as it can increase output with the same amount of input or less.</p>
+                <h4>Productivity is described as the ratio between the output volume and the volume of inputs. How effectively you are able to do something compared to the effort put in. Productivity is vital as it can increase output with the same amount of input or less.</h4>
+            </div>
+        </section>
+        <section>
+            <h2>Steps to be more productive include:</h2>
+            <div>
+                <ol>
+                    <li>Focus on one goal at a time.<p>By concentrating on one thing at a time, you are achieving the best outcome possible.</p></li>
+                    <li>Figure out your peak hours.<p>Find the hours that best suit you to work better and make sure to not sacrifice sleep whatsoever for these tasks.</p></li>
+                    <li>Take breaks.<p>Make sure your breaks are away from work, so go outside and enjoy nature from time to time.</p></li>
+                    <li>Discover your learning style.<p>There are many learning styles, including visual, auditory and/or kinaesthetic. So find out which one works best for you, to be able to work successfully.</p></li>
+                </ol>
+            </div>
+        </section>
+        <section>
+            <h2>Additional Resources:</h2>
+            <div>
+                <h3>One key method used to increase productivity is the pomodoro method. Watch the video below to understand.</h3>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mNBmG24djoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>Source: <a href="https://www.youtube.com/watch?v=mNBmG24djoY">YouTube</a></p>
+            </div>
+            <div>
+                <h3>Here is another resource, which goes into more depth about different learning styles.</h3>
+                <p>Resource link: <a href="https://www.time4learning.com/learning-styles/">time4learning</a></p>
+            </div>
+        </section>
+        <section>
+            <h2>References (Sources):</h2>
+            <div>
+                <ul>
+                    <li>Eight tips to prepare you for online study n.d., tafeqld.edu.au, viewed on the 4th of April 2021</li>
+                    <li>How to study online for the best results - SEEK Learning n.d., wwww.seek.com.au, viewed on the 4th of April 2021</li>
+                </ul>
             </div>
         </section>
     </main>
