added stress and managing it to page 5

--- a/Page_5.html
+++ b/Page_5.html
@@ -56,6 +56,7 @@
                         <p>c. Beyond Blue helpline: 1300 22 4636.</p>
                 <h4>When stress become overwhelming and prolong, the risks of mental health problems and medical problems increase. Long -term stress can increase mental health problems such as anxiety and depressions, substance use problems, sleep problems, pain and bodily complaints such as muscle tensions. To overcome this below is an overview of stress and stress management tips.</h4>
             </div>
+            <h2>Stress and managing it</h2>
             <p>Stress is the normal reaction the body has when trying to adapt when changes occur resulting in physical, emotional, mental and intellectual responses. Effective stress management helps you break hold of the reaction and can make you happier, healthier and more productive.</p>
             <h2>Signs of stress are:</h2>
             <ul>
