changed page 6 and added pics for page 6

--- a/Page_6.html
+++ b/Page_6.html
@@ -20,14 +20,9 @@
         </section>
         <section>
             <h2>Helplines:</h2>
-            <ul>
-                <li>Kids HelpLine - Telephone counselling service for 5-25 year olds - 1800 55 1800 - Operates 24/7</li>
-                <li>Headspace - Mental health support for young people aged 12-25 - 1800 650 890 - 10pm to 1am</li>
-                <li>Directline - For people impacted by drug use - 1800 888 236 - Operates 24/7</li>
-                <li>Griefline - Support for experiencing loss and grief - 1300 845 745 - Noon to 3am</li>
-                <li>Lifeline - Crisis support and suicide prevention - 13 11 14 - Operates 24/7</li>
-                <li>Beyondblue - Depression, anxiety and related disorders - 1300 22 4636 - Operates 24/7</li>    
-            </ul>
+            <img src="helpline 1.png">
+            <img src="helpline 2.png">
+            <img src="helpline 3.png">
         </section>
     </main>
 </body>
