Changed a lot of stuff to make it more appealing

--- a/Page_1.html
+++ b/Page_1.html
@@ -5,31 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Online Study Guide</title>
-    <link rel="stylesheet" href="/Online_Study_Guide.css">
+    <link rel="stylesheet" href="./Online_Study_Guide.css">
 </head>
 <body>
     <nav>
-        <link rel="stylesheet" href="/dropdown_menu_bar.css">
+        <link rel="stylesheet" href="./dropdown_menu_bar.css">
         <div class="navbar">
-            <a href="/Page_1.html">Home</a>
-            <a href="/Page_7.html">About Us</a>
+            <a href="./Page_1.html">Home</a>
+            <a href="./Page_7.html">About Us</a>
             <div class="dropdown">
               <button class="dropbtn">Pages
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="/Page_2.html">General Tips</a>
-                <a href="/Page_3.html">Study Resources</a>
-                <a href="/Page_4.html">Physical Health</a>
-                <a href="/Page_5.html">Mental Health</a>
-                <a href="/Page_6.html">Helplines</a>
+                <a href="./Page_2.html">General Tips</a>
+                <a href="./Page_3.html">Study Resources</a>
+                <a href="./Page_4.html">Physical Health</a>
+                <a href="./Page_5.html">Mental Health</a>
+                <a href="./Page_6.html">Helplines</a>
               </div>
             </div>
           </div>
     </nav>
     <main>
         <section>
-            <h1>Page 1 = Introduction to The Online Study Guide</h1>
+            <h1>Page 1 - Introduction to The Online Study Guide</h1>
             <div>
                 <p>Welcome to the Home Page.</p>
                 <p>This is a website developed for the use of individuals seeking help or information regarding online learning and how to maintain physical and mental health during that process. We have several tips and strategies that can help you be the best during online learning. In addition, we have valuable resources to support students with their online schoolwork. Our goal is to help you succeed and have a better experience when studying from home, especially during a pandemic.</p>
@@ -40,9 +40,9 @@
             <h2>Here are straight forward links to the pages on the content briefly mentioned:</h2>
             <div>
                 <ul>
-                    <li><a href="/Page_2.html">Page 2 = General Tips for Online Studying</a></li>
-                    <li><a href="/Page_4.html">Page 4 = Physical Health</a></li>
-                    <li><a href="/Page_5.html">Page 5 = Mental Health</a></li>
+                    <li><a href="./Page_2.html">Page 2 = General Tips for Online Studying</a></li>
+                    <li><a href="./Page_4.html">Page 4 = Physical Health</a></li>
+                    <li><a href="./Page_5.html">Page 5 = Mental Health</a></li>
                 </ul>
             </div>
         </section>
