--- a/Page_3.html
+++ b/Page_3.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Online Study Guide</title>
-    <link rel="stylesheet" href="/Online_Study_Guide.css">
+    <link rel="stylesheet" href="./Online_Study_Guide.css">
 </head>
 <body>
     <nav>
-        <link rel="stylesheet" href="/dropdown_menu_bar.css">
+        <link rel="stylesheet" href="./dropdown_menu_bar.css">
         <div class="navbar">
             <a href="/Page_1.html">Home</a>
             <a href="/Page_7.html">About Us</a>
@@ -18,18 +18,18 @@
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="/Page_2.html">General Tips</a>
-                <a href="/Page_3.html">Study Resources</a>
-                <a href="/Page_4.html">Physical Health</a>
-                <a href="/Page_5.html">Mental Health</a>
-                <a href="/Page_6.html">Helplines</a>
+                <a href="./Page_2.html">General Tips</a>
+                <a href="./Page_3.html">Study Resources</a>
+                <a href="./Page_4.html">Physical Health</a>
+                <a href="./Page_5.html">Mental Health</a>
+                <a href="./Page_6.html">Helplines</a>
               </div>
             </div>
           </div>
     </nav>
     <main>
         <section>
-            <h1>Page 3 = Online Studying Resources</h1>
+            <h1>Page 3 - Online Studying Resources</h1>
             <div>
                 <p>Online learning was especially hard because of the lack of resources to study. However due to trial-and-error students developed and found a variety of methods to overcome this, including several helpful websites. This page will be a resource database for individuals to access to help the understand concepts for several different subjects.</p>
             </div>
