--- a/Page_2.html
+++ b/Page_2.html
@@ -5,31 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Online Study Guide</title>
-    <link rel="stylesheet" href="/Online_Study_Guide.css">
+    <link rel="stylesheet" href="./Online_Study_Guide.css">
 </head>
 <body>
     <nav>
-        <link rel="stylesheet" href="/dropdown_menu_bar.css">
+        <link rel="stylesheet" href="./dropdown_menu_bar.css">
         <div class="navbar">
-            <a href="/Page_1.html">Home</a>
-            <a href="/Page_7.html">About Us</a>
+            <a href="./Page_1.html">Home</a>
+            <a href="./Page_7.html">About Us</a>
             <div class="dropdown">
               <button class="dropbtn">Pages
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="/Page_2.html">General Tips</a>
-                <a href="/Page_3.html">Study Resources</a>
-                <a href="/Page_4.html">Physical Health</a>
-                <a href="/Page_5.html">Mental Health</a>
-                <a href="/Page_6.html">Helplines</a>
+                <a href="./Page_2.html">General Tips</a>
+                <a href="./Page_3.html">Study Resources</a>
+                <a href="./Page_4.html">Physical Health</a>
+                <a href="./Page_5.html">Mental Health</a>
+                <a href="./Page_6.html">Helplines</a>
               </div>
             </div>
           </div>
     </nav>
     <main>
         <section>
-            <h1>Page 2 = General Tips for Online Studying</h1>
+            <h1>Page 2 - General Tips for Online Studying</h1>
             <div>
                 <p>
                     Online studying is the process where an individual attends courses offered by institutions such as school that are 100% virtual, excluding some rare cases. Online learning, or virtual lessons are offered over the internet and is contrasted with tradition learning methods taken in a school building.
