--- a/Page_4.html
+++ b/Page_4.html
@@ -5,31 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Online Study Guide</title>
-    <link rel="stylesheet" href="/Online_Study_Guide.css">
+    <link rel="stylesheet" href="./Online_Study_Guide.css">
 </head>
 <body>
     <nav>
-        <link rel="stylesheet" href="/dropdown_menu_bar.css">
+        <link rel="stylesheet" href="./dropdown_menu_bar.css">
         <div class="navbar">
-            <a href="/Page_1.html">Home</a>
-            <a href="/Page_7.html">About Us</a>
+            <a href="./Page_1.html">Home</a>
+            <a href="./Page_7.html">About Us</a>
             <div class="dropdown">
               <button class="dropbtn">Pages
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="/Page_2.html">General Tips</a>
-                <a href="/Page_3.html">Study Resources</a>
-                <a href="/Page_4.html">Physical Health</a>
-                <a href="/Page_5.html">Mental Health</a>
-                <a href="/Page_6.html">Helplines</a>
+                <a href="./Page_2.html">General Tips</a>
+                <a href="./Page_3.html">Study Resources</a>
+                <a href="./Page_4.html">Physical Health</a>
+                <a href="./Page_5.html">Mental Health</a>
+                <a href="./Page_6.html">Helplines</a>
               </div>
             </div>
           </div>
     </nav>
     <main>
         <section>
-            <h1>Page 4 = Physical Health</h1>
+            <h1>Page 4 - Physical Health</h1>
             <div>
                 <p>Physical Health is vital in the development and quality of life of individuals. This can be maintained through several activities, the main one being exercise. Physical exercise can reduce the risk of developing long term health conditions such as diabetes and obesity.</p>
             </div>
