--- a/Page_6.html
+++ b/Page_6.html
@@ -17,6 +17,9 @@
               <button class="dropbtn">Pages
                 <i class="fa fa-caret-down"></i>
               </button>
+              <button class="webname">The Online Study Guide
+                <i class="fa fa-caret-down"></i>
+              </button>
               <div class="dropdown-content">
                 <a href="./Page_2.html">General Tips</a>
                 <a href="./Page_3.html">Study Resources</a>
